tests/compiler/typecheck/cannot_invoke_non_function_1.kk.out
1
========

========
error:
  ┌─ tests/compiler/typecheck/cannot_invoke_non_function_1.kk:2:14
  │
2 │ let f = 'hi'.x()
  │              ^ Cannot call a non-function
  │
  = The type of this expression is not function, so you cannot call it.

